# django-clean-architecture

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yaml  pyproject.toml
tests/: conftest.py
tests/plugins/factories/: book.py  user.py
tests/plugins/instances/: rest.py  storages.py
tests/presentors/rest/api/v1/book/: test_create_book.py
